# HomeWork

./: pyproject.toml
src/: main.py  masks.py  widget.py
