[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Deineka Alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 119
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv"]

[tool.mypy]
disallow_untiped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
# максимальная длина строки
line_length = 119